# sysfix-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
sysfixai/: __init__.py  ai.py  cli.py  core.py
tests/: test_core.py
